fix: :lady_beetle: エラーハンドラーの実装によりAPIの処理側を修正
