# docs/openapi.yaml
@@ -53,7 +53,11 @@ paths:
               schema:
                 type: object
                 properties:
+                  statusCode:
+                    type: number
                   error:
+                    type: string
+                  message:
                     type: string
         "404":
           description: Default Response
@@ -62,7 +66,11 @@ paths:
               schema:
                 type: object
                 properties:
+                  statusCode:
+                    type: number
                   error:
+                    type: string
+                  message:
                     type: string
         "500":
           description: Default Response
@@ -71,7 +79,11 @@ paths:
               schema:
                 type: object
                 properties:
+                  statusCode:
+                    type: number
                   error:
+                    type: string
+                  message:
                     type: string
   /users/:
     get:
